# Faceit-Helper

./: CMakeLists.txt  README.md
src/: Helper.cpp  Helper.h  main.cpp
